---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: ?
  Features:
    - Complete rewrite of item randomization, refactoring and removing softlocks
    - (Nifyr) Filled in many numerical randomizations that weren't done yet
    - (Nifyr) A new system for trigger-based randomizations, allowing for better randomization of capsules, military stuff, and more
    - (Nifyr) Randomize spoil result entity of items that spawn units when they spoil
  Bugfixes:
    - Allowed module randomization with modded modules and a few other mod incompatibilities
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2025.12.07
  Features:
    - Added Nifyr's contributions to project, marked in changelog
    - Chaos setting now changes range of possible values as well
    - (Nifyr) Dynamic description coloring
    - Beacon profile randomization
    - Equipment shape randomization
    - (Nifyr and exfret): Many new smaller/numerical randomizations
    - (Nifyr): Performance improvements to graph building
  Changes:
    - (Nifyr) Trying out new numerical randomization algorithm
    - (Nifyr) New rounding algorithm
    - (Nifyr) Reworked randomization of fuel items, modules, electric poles, inserter/drill offsets, and unit sizes, and more
  Bugfixes:
    - Removed occasional infinite loop in recipe randomization
    - (Nifyr) Recycling recipes are now regenerated following vanilla rules
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2025.09.10
  Features:
    - Randomized fluidbox locations
    - Item fuel randomization
    - Finished duplicates feature
    - Recipe tech unlock randomization
    - Ultimate chaos mode with many duplicates rough draft complete
  Changes:
    - Long randomizations are off by default so that the mod loads quickly the first time